--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,5 +2,8 @@
     "fmt": {
         "singleQuote": true,
         "indentWidth": 4
+    },
+    "imports": {
+        "@std/assert": "jsr:@std/assert@^0.222.1"
     }
 }
