--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,4 +1,7 @@
 {
+    "tasks": {
+        "test": "rm -rf cov_profile && deno test --coverage=cov_profile && deno coverage cov_profile --html"
+    },
     "fmt": {
         "singleQuote": true,
         "indentWidth": 4
