Exclude cov_profile from fmt

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,7 +4,8 @@
     },
     "fmt": {
         "singleQuote": true,
-        "indentWidth": 4
+        "indentWidth": 4,
+        "exclude": ["cov_profile"]
     },
     "imports": {
         "@std/assert": "jsr:@std/assert@^0.222.1"
